# gitty

./: .gitignore  README.md  gitty.md  pyproject.toml  test_init.py
gitty/: cli.py
gitty/core/: add.py  commit.py  config.py  hash_object.py  index.py  init.py  status.py  tree.py
tests/: test_commit.py  test_status.py
