[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitty"
version = "0.1.0"
description = "A simple git clone"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["gitty"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
gitty = "gitty.cli:main"
